--- a/eParty/packages.config
+++ b/eParty/packages.config
@@ -55,6 +55,7 @@
   <package id="Microsoft.AspNetCore.Routing" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Numerics" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net472" />
@@ -83,6 +84,9 @@
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.WebEncoders" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.ML" version="4.0.3" targetFramework="net472" />
+  <package id="Microsoft.ML.CpuMath" version="4.0.3" targetFramework="net472" />
+  <package id="Microsoft.ML.DataView" version="4.0.3" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers" version="4.0.1" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.2.3" targetFramework="net472" />
@@ -108,10 +112,11 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="QRCoder" version="1.7.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
+  <package id="System.CodeDom" version="8.0.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Composition" version="1.0.31" targetFramework="net472" />
   <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net472" />
@@ -134,13 +139,15 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net472" />
+  <package id="System.Numerics.Tensors" version="8.0.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net472" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
@@ -158,8 +165,9 @@
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="8.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net472" />
